[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insurelink-v1"
version = "1.0.0"
description = "A professional car and bike insurance agent environment for evaluating tool-use and reasoning."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["openenv", "insurance", "agents", "tool-use"]
tags = ["finance", "insurance", "reasoning", "multi-turn"]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.0.0",
    "openenv-core",
    "python-dotenv"
]

[project.scripts]
server = "server.app:main"
